changed layout on ui

--- a/app/src/main/res/drawable/messenger_textview_received_shape_more.xml
+++ b/app/src/main/res/drawable/messenger_textview_received_shape_more.xml
@@ -3,14 +3,14 @@
 
     <!-- View background color -->
     <solid
-        android:color="#8adf6e" >
+        android:color="#4b97d6" >
     </solid>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:bottomRightRadius="0dp"
+        android:bottomRightRadius="10dp"
         android:topRightRadius="10dp"
-        android:topLeftRadius="10dp"
+        android:topLeftRadius="-20dp"
         android:bottomLeftRadius="10dp"
         android:radius="5dp">
     </corners>
