--- a/app/src/main/res/drawable/messenger_textview_received_shape.xml
+++ b/app/src/main/res/drawable/messenger_textview_received_shape.xml
@@ -3,15 +3,15 @@
 
     <!-- View background color -->
     <solid
-        android:color="#FF6E00" >
+        android:color="#4b97d6" >
     </solid>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:bottomRightRadius="60dp"
-        android:topRightRadius="60dp"
-        android:topLeftRadius="-60dp"
-        android:bottomLeftRadius="60dp"
-        android:radius="20dp">
+        android:bottomRightRadius="10dp"
+        android:topRightRadius="10dp"
+        android:topLeftRadius="-50dp"
+        android:bottomLeftRadius="10dp"
+        android:radius="5dp">
     </corners>
 </shape>
