--- a/app/src/main/res/layout/received_message_holder.xml
+++ b/app/src/main/res/layout/received_message_holder.xml
@@ -14,37 +14,43 @@
             android:id="@+id/img_profile"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
+            android:layout_marginTop="4dp"
             android:src="@drawable/ic_profile"/>
         <TextView
             android:id="@+id/ttv_message_received"
-            android:text="hi man, how are you?"
+            android:text="Hi there!"
             android:background="@drawable/messenger_textview_received_shape"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:padding="6dp"
+            android:padding="10dp"
             android:textColor="#ffffff"
             android:layout_marginTop="4dp"/>
-        <TextView
-            android:id="@+id/ttv_time_received"
-            android:text="15:38"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="10sp"
-            android:textStyle="bold"
-
-            android:layout_gravity="top"
-            android:padding="4dp"
-            android:textColor="#bfbaba"
-            android:layout_marginTop="4dp"/>
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+           <TextView
+               android:id="@+id/ttv_time_received"
+               android:text="15:38"
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:textSize="10sp"
+               android:textStyle="bold"
+               android:layout_weight="1"
+               android:textColor="#bfbaba"
+               android:paddingLeft="4dp"
+               android:layout_marginTop="4dp"/>
+           <TextView
+               android:id="@+id/ttv_read_status_received"
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:paddingTop="4dp"
+               android:paddingLeft="6dp"
+               android:layout_weight="1"
+               android:textSize="12dp"
+               android:text="read"/>
+       </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/ttv_read_status_received"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:padding="2dp"
-        android:layout_below="@+id/content_layout"
-        android:text="read"/>
+
 </RelativeLayout>
