--- a/app/src/main/res/layout/template_chat_layout.xml
+++ b/app/src/main/res/layout/template_chat_layout.xml
@@ -2,6 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="15dp"
     android:layout_height="75dp">
 
 
@@ -18,6 +20,8 @@
             android:src="@drawable/ic_profile"/>
 
         <LinearLayout
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
